Fixed Alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -140,11 +140,12 @@ img{
   }
 
 .grid{
-padding: 10px 100px;
+padding: 40px 100px;
 margin: 0 auto;
+
   display: grid;
   grid-template-columns: 2fr 4fr 2fr;
-  justify-items: center;
+  gap:50px;
 
 }
 
@@ -153,20 +154,11 @@ margin: 0 auto;
   color: #fff;
  
   font-size: 21px;
-
-
- 
-  
+  text-align: left;
+    
 }
-.bundle{
-
-margin-bottom: 60px;
-text-align: left;
-float: left;
-justify-content: left;
 
 
-}
 
 
 .btn-bundle{
